--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -60,6 +60,7 @@
       table{border-collapse:collapse;width:100%}
       td,th{border:1px solid #ccc;text-align:left;padding:6px;font-weight:400}
       th{font-weight:700;background:#ddd;text-align:center}
+	  #targetport, #protocol, #comment {margin-bottom:0px;}
       .myImage{padding:0;margin:0}
       .mikrotik-logo{display:none}
       .input-menu{display:flex}
