--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MikroTik PPP Username Password Generator - BuanaNETPBun.Github.io</title>
+    <title>MikroTik PPP Secrets Username Password Generator - BuanaNETPBun.Github.io</title>
     <meta content='MikroTik Create PPP Username Password Generator - BuanaNETPBun.Github.io' name='description'>
     <meta content='PPP, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
@@ -20,7 +20,7 @@
     <style>
       /* -----------------------------------------------------------------
       ####################################################################
-      # Mikrotik PPP Username Password Generator
+      # Mikrotik PPP SECRETS Username Password Generator
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://github.com/buananetpbun
       # Site      : http://www.o-om.com
@@ -138,7 +138,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>MIKROTIK <span style="color:#ff6600">PPP USERNAME PASSWORD</span> GENERATOR</h1>
+        <h1>MIKROTIK <span style="color:#ff6600">PPP SECRETS USERNAME PASSWORD</span> GENERATOR</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
@@ -184,7 +184,7 @@
             <div id="showScript">
               <span style="color:#ff6600;">
               ###################################################<br>
-              # Mikrotik PPP Username Password Generator<br>
+              # Mikrotik PPP Secrets Username Password Generator<br>
               # Date/Time: <span id="tanggalwaktu"></span><br>
               # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
               ###################################################<br>
