--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree and Queue Simple</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
         </div>
-        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span></div>
+        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span> <span style="color:#ff6600">//</span> PPP</span></div>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code Template</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-sharing-hotspot.html">Block Sharing Hotspot with "Change TTL"</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hotspot-wizard.html">Easy Hotspot Configuration Wizard</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-ppp-generator.html">PPP / PPPoE Username Password Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>			
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-ppp-generator.html">PPP Secrets Username Password Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>			
           </div>
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-hotspot-generator.html">Hotspot Username Password Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
