--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -154,17 +154,17 @@
               <option value="sstp">SSTP</option>
             </select>
             <label>Quantity User PPP</label>
-            <input type="text" id="input-gty-ppp" value="20" placeholder="256 only recomended">
+            <input maxlength="4" type="text" onkeypress="return event.charCode != 32" id="input-gty-ppp" value="20" placeholder="256 only recomended">
             <label>PPP Profile Name</label>
-            <input type="text" id="input-profile-ppp" value="default" placeholder="default">
+            <input type="text" onkeypress="return event.charCode != 32" id="input-profile-ppp" value="default" placeholder="default">
             <label>Rate Limit [up/down] </label>
             <input type="text" id="input-rate-limit" value="2M/3M" placeholder="2M/3M can use burst limit">			
             <label>Local Server IP Address</label>
-            <input type="text" id="input-local-address" value="172.16.16.1" placeholder="local address / server">			
+            <input type="text" onkeypress="return event.charCode != 32" id="input-local-address" value="172.16.16.1" placeholder="local address / server">			
             <label>Client IP Address Start from</label>
-            <input type="text" id="input-remote-address" value="10" placeholder="10">
+            <input maxlength="3" type="text" onkeypress="return event.charCode != 32"id="input-remote-address" value="10" placeholder="10">
             <label >Type Username</label>
-            <input type="text" id="input-type-user" value="user@" placeholder="type user ppp name">
+            <input type="text" onkeypress="return event.charCode != 32" id="input-type-user" value="user@" placeholder="type user ppp name">
             <label>Type Password</label>
             <select id="input-type-password">
               <option value="pass1">Password = Username</option>
