--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -146,7 +146,7 @@
             <label>Qty User Hotspot</label>
             <input type="text" maxlength="4" onkeypress="return event.charCode != 32" id="input-gty-hotspot" value="100" placeholder="256 only recomended">
             <label>Profile Hotspot</label>
-            <input type="text" onkeypress="return event.charCode != 32" id="input-profile-hotspot" value="default" placeholder="default">
+            <input type="text" id="input-profile-hotspot" value="default" placeholder="default">
             <label>Rate Limit [up/down]</label>
             <input type="text" id="input-rate-limit" value="1M/2M" placeholder="1M/2M can use burst limit">
             <label>Limit Uptime [duration]</label><br><span style='color:#ff6600; font-size:13px'>d=days, h=hours, m=minutes</span>
@@ -154,7 +154,7 @@
             <label>Limit Quota [total Bytes] </label><br><span style='color:#ff6600;font-size:13px'>K=KB, M=MB, G=GB in Bytes</span>
             <input onkeydown="upperCaseF(this)" onkeypress="return event.charCode != 32" style='margin-top:5px' type="text" id="input-limit-quota" value="0G" placeholder="2G or 0 (unlimited)">
             <label >Type Username</label>
-            <input type="text" onkeypress="return event.charCode != 32" id="input-type-user" value="user-" placeholder="user-">
+            <input type="text" id="input-type-user" value="user-" placeholder="user-">
             <label>Type Password</label>
             <select id="input-type-password">
               <option value="pass1">Password = Username</option>
