--- a/pcc.html
+++ b/pcc.html
@@ -171,7 +171,7 @@
             </div>
           </div>
           <div style="clear:both"></div>
-          <div style="color:#ff6600; border:1px solid #bbb; padding:7px;margin-top:0px;margin-bottom:10px">Please change your WAN interface name with your router condition, Example: ether1 or E1-WAN or e1-indihome or pppoe-out1
+          <div style="color:#ff6600; border:1px solid #bbb; padding:7px;margin-top:0px;margin-bottom:10px">Change your interface name with your router condition like name ether1 or E1-WAN or pppoe-out1. you can use % like this 192.168.1.1%ether1 and 192.168.1.1%ether2 for same IP Gateway.
           </div>
           <div style="clear:both"></div>
           <div style="display:flex; border-bottom:1px solid #bbb; margin-bottom:5px;">
