--- a/pcc.html
+++ b/pcc.html
@@ -52,7 +52,7 @@
       input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;margin-bottom:10px;margin-top:5px;font-size:14px!important;border-radius:5px}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
-      .list-output-content{height:592px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:5px;border:1px solid #ccc;border-radius:5px;font-size:14px;white-space:nowrap}
+      .list-output-content{height:630px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:5px;border:1px solid #ccc;border-radius:5px;font-size:14px;white-space:nowrap}
       @media screen and (max-width:700px) {
       .list-output-content{height:auto}
       .main-wrap{display:block}
@@ -171,7 +171,7 @@
             </div>
           </div>
           <div style="clear:both"></div>
-          <div style="color:#ff6600; border:1px solid #bbb; padding:7px;margin-top:0px;margin-bottom:10px">Change your interface name with your router condition like name ether1 or E1-WAN or pppoe-out1. you can use % like this 192.168.1.1%ether1 and 192.168.1.1%ether2 for same IP Gateway.
+          <div style="color:#ff6600; border:1px solid #bbb; padding:7px;margin-top:0px;margin-bottom:10px">Change your WAN Interface name with your Router condition. You can use % like this 192.168.1.1%ether1 and 192.168.1.1%ether2 for same IP Gateway. for PPPoE Client you can enter the name directly on the gateway without IP.
           </div>
           <div style="clear:both"></div>
           <div style="display:flex; border-bottom:1px solid #bbb; margin-bottom:5px;">
